putting in text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <svg width="640" height="800" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g class="android">
+        <defs>
+            <path id="cesta_pro_text" d="M 0,800 q 320, -140 640,0"/>
+        </defs>
         <g class="android_tykadla">
             <line
                     x1="250"
@@ -54,6 +57,12 @@
     l 0,175
     a 25,25 0 0 1 -25,25 l -170,0 a 25,25 0 0 1 -25, -25
     Z"/>
+        </g>
+
+        <g class="textik">
+            <text x="320" y="675" text-anchor="middle" font-size="48" line-height="1">
+                Android is good
+            </text>
         </g>
     </g>
 </svg>
