--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
         </g>
 
         <g class="textik">
-            <text x="320" y="675" text-anchor="middle" font-size="48" line-height="1">
-                Android is good
+            <text text-anchor="middle" font-size="48" line-height="1">
+                <textPath xLink:href="#cesta_pro_text" startOffset="330">
+                    Android is good
+                </textPath>
+
             </text>
         </g>
     </g>
