--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<html>
+<head>
+    <link href="svg.css" rel="stylesheet" type="text/css">
+</head>
+<body>
 <svg width="640" height="800" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g class="android">
         <defs>
             <path id="cesta_pro_text" d="M 0,800 q 320, -140 640,0"/>
         </defs>
+        <g class="android_hlava">
+            <ellipse cx="320" cy="250" rx="110" ry="90"/>
+
         <g class="android_tykadla">
             <line
                     x1="250"
@@ -31,6 +39,7 @@
             <circle cx="275" cy="200" r="12"/>
             <circle cx="365" cy="200" r="12"/>
         </g>
+        </g>
         <g class="android_leva_ruka">
             <circle cx="170" cy="290" r="25"/>
             <circle cx="170" cy="390" r="25"/>
@@ -42,9 +51,7 @@
             <circle cx="470" cy="390" r="25"/>
             <rect x="445" y="290" width="50" height="100"/>
         </g>
-        <g class="android_hlava">
-            <ellipse cx="320" cy="250" rx="110" ry="90"/>
-        </g>
+
         <g class="android_nohy">
             <rect x="350" y="450" width="50" height="100" rx="25" ry="25"/>
             <rect x="250" y="450" width="50" height="100" rx="25" ry="25"/>
@@ -69,3 +76,5 @@
         </g>
     </g>
 </svg>
+</body>
+</html>
