--- a/index.html
+++ b/index.html
@@ -76,5 +76,9 @@
         </g>
     </g>
 </svg>
+<script>
+    var path = document.querySelector('.android_telo path');
+    var length = path.getTotalLength();
+</script>
 </body>
 </html>
